@@ -311,6 +311,12 @@
          'GET': None,
          'args': """This route is self-documenting on GET requests""",
          },
+        {'endpoint': '/account-key/upload.json',
+         'about': """Upload an account-key""",
+         'POST': True,
+         'GET': None,
+         'args': """This route is self-documenting on GET requests""",
+         },
         {'endpoint': '/account-keys.json',
          'about': """list account keys""",
          'POST': True,
